Vorläufiges FPGA-Kapitel fertig

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,10 @@
+@misc{amazonec2f1,
+    author = {{Amazon Web Services, Inc.}},
+    title = {Amazon EC2 F1"=Instances},
+    url = {https://aws.amazon.com/de/ec2/instance-types/f1/},
+    urldate = {2019-11-22}
+}
+
 @misc{computecpp,
     author = {{Codeplay Software Ltd.}},
     title = {ComputeCpp},
@@ -243,6 +250,18 @@
     booktitle = {Proceedings of \nth{5} International Workshop on OpenCL},
     articleno = {32},
     doi = {10.1145/3078155.3078189}
+}
+
+@inproceedings{ditucci2017,
+    author = {Di Tucci, Lorenzo and Rabozzi, Marco and Stornaiuolo, Luca and
+              Santambrogio, Marco Domenico},
+    title = {The Role of CAD Frameworks in Heterogeneous FPGA"=Based Cloud
+             Systems},
+    year = 2017,
+    month = nov,
+    booktitle = {IEEE \nth{35} International Conference on Computer Design},
+    pages = {423--426},
+    doi = {10.1109/ICCD.2017.74}
 }
 
 @thesis{benner2018,
